# RCIR-UAV

./: README.txt
Onboard-SDK-ROS/dji_sdk_demo/: CMakeLists.txt
Onboard-SDK-ROS/dji_sdk_demo/config/: config.yaml
Onboard-SDK-ROS/dji_sdk_demo/include/mymission/: Control_law.h  Mission.h  artifical_potencial_field.h  auto_landing_task.h  avoid_obsta_from_mono_radar.h  caitu.h  caitu_new_cam.h  config.h  fly_with_vision.h  flydata.h  kalibr_bag.h  obstacle_avoidance_task.h  track.h  track_planning.h
Onboard-SDK-ROS/dji_sdk_demo/launch/: avoid_obsta_from_mono_radar.launch  obstacle_avoidance.launch  vision_land.launch
Onboard-SDK-ROS/dji_sdk_demo/src/: demo_flight_control.cpp
Onboard-SDK-ROS/dji_sdk_demo/src/mymission/: Mission.cpp  artifical_potencial_field.cpp  auto_landing_task.cpp  avoid_obsta_from_mono_radar.cpp  caitu_lena.cpp  caitu_new_cam.cpp  fly_with_vision.cpp  flydata.cpp  kalibr_bag.cpp  obstacle_avoidance_task.cpp  path_planning.cpp  track.cpp  track_planning.cpp
cam/: CMakeLists.txt  package.xml
cam/calibration/: elp_left.yaml  elp_right.yaml
cam/config/: mono_lidar.yaml
cam/include/cam/: calib_cam_radar.h  fusion_lidar.h  mono_lidar_config.h  mono_lidar_fusion.h  obstacle_detection.h  stereo_camera.hpp  vision_land.h  vision_land2.h  waveradar2image.h
cam/include/stereo_utility/: frame.hpp  point_cloud_viewer.hpp  stereo_frame.hpp
cam/launch/: mono_lidar_fusion.launch  obstacle_detection_task.launch  pub_cam.launch  pub_mono_cam.launch  pub_new_cam.launch  vision_land_task.launch  vision_mission.launch
cam/msg/: mono_radar_fusion.msg  vision_msg.msg  vision_msgs.msg
cam/src/: .pub_cam_node.cpp.swp  calib_cam_radar.cpp  fusion_lidar.cpp  get_boundingboxes.cpp  k-means.cpp  mono_lidar_fusion.cpp  obstacle_detection.cpp  pub_cam_node.cpp  pub_left_cam.cpp  pub_mono_cam.cpp  pub_right_cam.cpp  pub_stereo_node.cpp  split_sync_images.cpp  stereo_camera.cpp  sub_cam_node.cpp  vision_land.cpp  vision_land2.cpp
cam/src/stereo_utility/: stereo_frame.cpp
darknet_ros/darknet/scripts/: 2007_train.txt  voc_label.py
darknet_ros/darknet_ros/config/: ros.yaml  yolov2-tiny-voc.yaml
darknet_ros/darknet_ros/launch/: darknet_ros.launch
ros_canopen/can_msgs/: CMakeLists.txt
ros_canopen/conti_radar/: CMakeLists.txt  package.xml
ros_canopen/conti_radar/include/: clusters_general_info_701.h  clusters_list_status_600.h  clusters_quality_info_702.h  object_extended_info_60d.h  object_general_info_60b.h  object_list_status_60a.h  object_quality_info_60c.h  radar_state_201.h
ros_canopen/conti_radar/src/: clusters_general_info_701.cpp  clusters_list_status_600.cpp  clusters_quality_info_702.cpp  object_extended_info_60d.cpp  object_general_info_60b.cpp  object_list_status_60a.cpp  object_quality_info_60c.cpp  radar_state_201.cpp
ros_canopen/my_radar/: CMakeLists.txt  package.xml
ros_canopen/my_radar/include/: clusters_radar_node.h  objects_radar_node.h  send_socketcan.h
ros_canopen/my_radar/launch/: clusters.launch  objects.launch  send_socketcan.launch
ros_canopen/my_radar/msg/: object.msg  objects.msg
ros_canopen/my_radar/src/: clusters_radar_node.cpp  objects_radar_node.cpp  send_socketcan.cpp
ros_canopen/socketcan_bridge/: CMakeLists.txt
ros_canopen/socketcan_interface/: CMakeLists.txt
wit_imu_node/: CMakeLists.txt  README.md  package.xml
wit_imu_node/include/wit_imu_9dof/: wit_imu.h
wit_imu_node/launch/: wit_imu.launch
wit_imu_node/src/: wit_imu_node.cpp
zed-ros-wrapper-2.3.x/launch/: zed.launch  zed_camera.launch
